--- a/ISFramework.UI/index.html
+++ b/ISFramework.UI/index.html
@@ -5,10 +5,12 @@
     <!-- This file has been downloaded from Bootsnipp.com. Enjoy! -->
     <title>Simple Admin - Bootsnipp.com</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="bower_components/Font-Awesome/css/font-awesome.css" rel="stylesheet" />
     <link ng-href="bootstrap/css/{{ direction == 'ltr' ? 'bootstrap' : 'bootstrap-rtl' }}.css" rel="stylesheet" />
     <link ng-href="EsComponent/checkbox/esCheckbox{{ direction == 'ltr' ? 'Ltr' : 'Rtl' }}.min.css" rel="stylesheet" />
-    <link href="layout.css" rel="stylesheet" />
-    
+    <link ng-href="EsComponent/textbox/esTextbox{{ direction == 'ltr' ? 'Ltr' : 'Rtl' }}.min.css" rel="stylesheet" />
+    <link ng-href="app/layout{{ direction == 'ltr' ? 'Ltr' : 'Rtl' }}.min.css" rel="stylesheet" />
+
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 </head>
@@ -27,23 +29,22 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">
-                    Administrator
+                    ISFramework
                 </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <form class="navbar-form navbar-left" method="GET" role="search">
-                    <div class="form-group">
-                        <input type="text" name="q" class="form-control" placeholder="Search">
-                    </div>
-                    <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
-                </form>
                 <ul class="nav navbar-nav navbar-right">
-
-                    <li>
-                        <a  ng-click="toggleDirection()">
-                            {{direction}}
+                    <li class="dropdown ">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                            Language
+                            <span class="caret"></span>
                         </a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li class="dropdown-header">Languages</li>
+                            <li class=""><a ng-click="setDirection('ltr')">English</a></li>
+                            <li class=""><a ng-click="setDirection('rtl')">Persian</a></li>
+                        </ul>
                     </li>
                     <li><a href="http://www.pingpong-labs.com" target="_blank">Visit Site</a></li>
                     <li class="dropdown ">
@@ -75,7 +76,50 @@
                         <div class="side-menu-container">
                             <ul class="nav navbar-nav">
                                 <li class="active"><a href="#"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a></li>
-                                <li><a href="#"><span class="glyphicon glyphicon-plane"></span> Active Link</a></li>
+                                <li class="panel panel-default" id="dropdown">
+                                    <a data-toggle="collapse" href="#dropdown-components">
+                                        <span class="glyphicon glyphicon-user"></span> Components <span class="caret"></span>
+                                    </a>
+                                    <div id="dropdown-components" class="panel-collapse collapse">
+                                        <div class="panel-body">
+                                            <ul class="nav navbar-nav">
+                                                <li><a href="#">Panel</a></li>
+                                                <li><a href="#">Checkbox</a></li>
+                                                <li><a href="#">Textbox</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="panel panel-default" id="dropdown">
+                                    <a data-toggle="collapse" href="#dropdown-templates">
+                                        <span class="glyphicon glyphicon-user"></span> Templates <span class="caret"></span>
+                                    </a>
+                                    <div id="dropdown-templates" class="panel-collapse collapse">
+                                        <div class="panel-body">
+                                            <ul class="nav navbar-nav">
+                                                <li><a href="#">SBAdmin</a></li>
+                                                <li><a href="#">Metronic</a></li>
+                                                <li><a href="#">AdminLTE</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="panel panel-default" id="dropdown">
+                                    <a data-toggle="collapse" href="#dropdown-theme">
+                                        <span class="glyphicon glyphicon-user"></span> Theme <span class="caret"></span>
+                                    </a>
+                                    <div id="dropdown-theme" class="panel-collapse collapse">
+                                        <div class="panel-body">
+                                            <ul class="nav navbar-nav">
+                                                <li><a href="#">LightSharp</a></li>
+                                                <li><a href="#">LightRound</a></li>
+                                                <li><a href="#">DarkSharp</a></li>
+                                                <li><a href="#">DarkRound</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li><a href="#"><span class="glyphicon glyphicon-plane"></span> Documentation</a></li>
                                 <li><a href="#"><span class="glyphicon glyphicon-cloud"></span> Link</a></li>
                                 <!-- Dropdown-->
                                 <li class="panel panel-default" id="dropdown">
@@ -108,7 +152,6 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="#"><span class="glyphicon glyphicon-signal"></span> Link</a></li>
                             </ul>
                         </div><!-- /.navbar-collapse -->
                     </nav>
@@ -117,13 +160,6 @@
         </div>
         <div class="col-md-10 content">
             <div ui-view></div>
-            <!--<div class="panel panel-default">
-                <div class="panel-heading">
-                    Dashboard
-                </div>
-                <div class="panel-body">
-                </div>
-            </div>-->
         </div>
         <footer class="pull-left footer">
             <p class="col-md-12">
@@ -139,6 +175,7 @@
     <script src="EsComponent/checkbox/esCheckbox.js"></script>
     <script src="app.js"></script>
     <script src="app/panelDemo/module.js"></script>
+    <script src="app/dashboard/module.js"></script>
     <script type="text/javascript">
         $(function () {
             $('.navbar-toggle-sidebar').click(function () {
