--- a/ISFramework.UI/index.html
+++ b/ISFramework.UI/index.html
@@ -1,20 +1,22 @@
 ﻿<!DOCTYPE html>
-<html lang="en" ng-app="app" ng-controller="layout">
+<html lang="en" ng-controller="layout">
 <head>
     <meta charset="utf-8">
     <!-- This file has been downloaded from Bootsnipp.com. Enjoy! -->
     <title>Simple Admin - Bootsnipp.com</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="site.css" rel="stylesheet" />
     <link href="bower_components/Font-Awesome/css/font-awesome.css" rel="stylesheet" />
+
     <link ng-href="bootstrap/css/{{ direction == 'ltr' ? 'bootstrap' : 'bootstrap-rtl' }}.css" rel="stylesheet" />
     <link ng-href="EsComponent/checkbox/esCheckbox{{ direction == 'ltr' ? 'Ltr' : 'Rtl' }}.min.css" rel="stylesheet" />
     <link ng-href="EsComponent/textbox/esTextbox{{ direction == 'ltr' ? 'Ltr' : 'Rtl' }}.min.css" rel="stylesheet" />
     <link ng-href="app/layout{{ direction == 'ltr' ? 'Ltr' : 'Rtl' }}.min.css" rel="stylesheet" />
 
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    
 </head>
 <body>
+    <div id="document-loading"></div>
     <nav class="navbar navbar-default navbar-static-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -54,7 +56,7 @@
                         </a>
                         <ul class="dropdown-menu" role="menu">
                             <li class="dropdown-header">SETTINGS</li>
-                            <li class=""><a href="#">Other Link</a></li>
+                            <li class=""><a ui-sref="penelDemo">Other Link</a></li>
                             <li class=""><a href="#">Other Link</a></li>
                             <li class=""><a href="#">Other Link</a></li>
                             <li class="divider"></li>
@@ -83,7 +85,7 @@
                                     <div id="dropdown-components" class="panel-collapse collapse">
                                         <div class="panel-body">
                                             <ul class="nav navbar-nav">
-                                                <li><a href="#">Panel</a></li>
+                                                <li><a ui-sref="penelDemo">Panel</a></li>
                                                 <li><a href="#">Checkbox</a></li>
                                                 <li><a href="#">Textbox</a></li>
                                             </ul>
@@ -168,6 +170,8 @@
             </p>
         </footer>
     </div>
+    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
     <script src="bower_components/angularjs/angular.js"></script>
     <script src="bower_components/ui-router/release/angular-ui-router.js"></script>
     <script src="EsComponent/Textbox/esTextbox.js"></script>
